resources/webidl2/test/invalid/idl/dict-field-unterminated.widl
dictionary Nene { DOMString cpp = "high" };
